[gd_scene load_steps=4 format=3 uid="uid://b533g3fle5ibk"]

[ext_resource type="Script" path="res://entities/platforms/platforms_with_two_gaps.gd" id="1_sutc4"]
[ext_resource type="PackedScene" uid="uid://kxalargknswc" path="res://entities/obstacle/obstacle.tscn" id="2_odmpg"]
[ext_resource type="Texture2D" uid="uid://sp0kh5aq5x87" path="res://sprites/Updatedplanet.png" id="3_lob10"]

[node name="PlatformsWithTwoGaps" type="CharacterBody2D"]
script = ExtResource("1_sutc4")

[node name="LeftPlatform" parent="." instance=ExtResource("2_odmpg")]
texture = ExtResource("3_lob10")

[node name="MiddlePlatform" parent="." instance=ExtResource("2_odmpg")]
texture = ExtResource("3_lob10")

[node name="RightPlatform" parent="." instance=ExtResource("2_odmpg")]
texture = ExtResource("3_lob10")
